--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "eslint .",
     "lint:fix": "npm run format && eslint --fix .",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky && npm run build"
   },
   "repository": {
     "type": "git",
